# minimal-example-for-mypy-dict-issue

./: README.md  pyproject.toml  test.py
