[tool.poetry]
name = "minimal-example-for-mypy-dict-issue"
version = "0.1.0"
description = ""
authors = ["Raphael Nestler <raphael.nestler@renuo.ch>"]
readme = "README.md"
packages = [{include = "minimal_example_for_mypy_dict_issue"}]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.group.dev.dependencies]
mypy = "^1.0.0"

[tool.mypy]
strict = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
